@@ -1,3 +1,15 @@
+2011-10-07  Sergey Glazunov  <serg.glazunov@gmail.com>
+
+        XSLT-generated document should inherit its SecurityOrigin from the source document
+        https://bugs.webkit.org/show_bug.cgi?id=69661
+
+        Reviewed by Adam Barth.
+
+        Test: http/tests/security/xss-DENIED-xsl-document-securityOrigin.xml
+
+        * xml/XSLTProcessor.cpp:
+        (WebCore::XSLTProcessor::createDocumentFromSource):
+
 2011-10-07  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r96944.
