@@ -1,3 +1,13 @@
+2011-10-07  Sergey Glazunov  <serg.glazunov@gmail.com>
+
+        XSLT-generated document should inherit its SecurityOrigin from the source document
+        https://bugs.webkit.org/show_bug.cgi?id=69661
+
+        Reviewed by Adam Barth.
+
+        * http/tests/security/xss-DENIED-xsl-document-securityOrigin-expected.txt: Added.
+        * http/tests/security/xss-DENIED-xsl-document-securityOrigin.xml: Added.
+
 2011-10-07  Brent Fulgham  <bfulgham@webkit.org>
 
         [WinCairo] Unreviewed Skiplist update to get WinCairo bot green.
